Archive2/c4/a4ea182f2a2aa4/output
main.cpp:9:10: error: overloaded 'operator==' must be a binary operator (has 3 parameters)
    void operator==(const Wrap& lhs, const Wrap& rhs)
         ^
main.cpp:24:13: error: invalid operands to binary expression ('Wrap' and 'Wrap')
    if (foo == bar)
        ~~~ ^  ~~~
main.cpp:15:9: warning: private field 'num' is not used [-Wunused-private-field]
    int num;
        ^
1 warning and 2 errors generated.
